# OptimisationNTN

./: .gitignore  .pylintrc  LICENSE  README.md  build.py  optimisation_ntn.spec  pyproject.toml  requirements.txt  setup.cfg  training_script.py
.github/workflows/: build.yml  python-tests.yml
analyse/: combined_analysis.ipynb  energy.ipynb  energy_by_usercount.ipynb  energy_qos_analysis.py  energy_ration_satisfaction.ipynb  request.ipynb  request_by_usercount.ipynb  test_sim.ipynb
analyze/: graph_analyse.ipynb
doc/: class_diagram.puml  simplified.puml
docs/: class_diagram.puml  simplified.puml
scripts/: run_simulations.py
src/optimisation_ntn/: gui.py  main.py  network.py  optimize.py  simulation.py
src/optimisation_ntn/algorithms/: base_algorithm.py  optimization_strategy.py  power_strategy.py  req_generator.py
src/optimisation_ntn/matrices/: base_matrice.py  decision_matrices.py  matrix.py
src/optimisation_ntn/network/: antenna.py  request.py
src/optimisation_ntn/networks/: antenna.py  communication_link.py  network.py  position.py  request.py
src/optimisation_ntn/nodes/: base_node.py  base_station.py  (+3 more)
tests/: test_simulation.py
tests/test_algorithms/: test_req_generator.py
tests/test_matrices/: test_coverage_matrix.py  test_power_matrix.py  test_request_matrix.py
tests/test_networks/: test_communication_link.py  test_communication_link_user-bs.py  test_communication_link_user-haps  test_communication_link_user-haps.py
tests/test_nodes/: test_decision_matrices.py  test_leo.py
tests/test_utils/: test_communication_link.py  test_shannon.py
(+39 files in other folders)
