# pyproject.toml
[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "optimisation_ntn"
version = "0.1.3"
description = "Edge Computing Network Simulator with various nodes (BS, HAPS, LEO) and optimization algorithms"
requires-python = ">=3.8"
dependencies = [
]

[tool.black]
line-length = 88